NTR - Rule builder css fixes

--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-base/sw-condition-base.html.twig
@@ -5,7 +5,8 @@
             <sw-field type="select"
                       name="type"
                       v-model="condition.type"
-                      class="field field--select field--condition">
+                      class="field field--select field--condition"
+                      :title="$tc(getLabel(condition.type))">
                 <template slot="options">
                     {% block sw_condition_field_condition_select_option %}
                     <option v-for="(innerCondition, innerConditionType) in ruleConditionDataProviderService.getConditions()"
