--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-or-container/sw-condition-or-container.less
@@ -16,7 +16,7 @@
     }
 
     .sw-condition-or-container__condition-content {
-        padding: 32px;
+        padding: 32px 32px 16px 32px;
     }
 
     .condition-content__spacer--or {
@@ -39,7 +39,7 @@
     }
 
     .sw-condition-or-container__actions {
-        margin-top: 20px;
+        margin-top: 16px;
 
         .sw-button {
             height: 32px;
