--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-and-container/sw-condition-and-container.less
@@ -15,7 +15,7 @@
     }
 
     .sw-condition-and-container__condition-content {
-        padding: 20px;
+        padding: 32px 32px 16px 32px;
     }
 
     .condition-content__spacer--and {
@@ -26,7 +26,8 @@
     }
 
     .sw-condition-and-container__actions {
-        margin-top: 20px;
+        margin-top: 16px;
+
         .sw-button {
             height: 32px;
             border: 1px solid @sw-condition-and-container-button-border;
