--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.less
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.less
@@ -5,10 +5,20 @@
         flex-grow: 1;
         min-width: 50%;
 
+        .sw-field__select .sw-icon.sw-icon--small {
+            width: 15px;
+            height: 15px;
+        }
+
         .sw-select__inner {
             border: none;
             padding: 4px 45px 0 13px;
             min-height: 38px;
+        }
+
+        .sw-select__indicators {
+            top: 10px;
+            right: 5px;
         }
     }
 }
