--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.less
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.less
@@ -1,5 +1,5 @@
 .sw-settings-rule-detail {
     .sw-settings-rule-detail__condition_container .sw-card__content {
-        padding-left: 20px;
+        padding: 0;
     }
 }
