NEXT-1081 - Use context to declare default language ids for the application

--- a/Resources/administration/src/app/component/structure/sw-language-info/sw-language-info.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-language-info/sw-language-info.html.twig
@@ -1,12 +1,12 @@
 {% block sw_language_info %}
-    <div class="sw-language-info" v-if="infoText">
+    <p class="sw-language-info" v-if="infoText">
         {% block sw_language_info_text %}
-            <p>
-                <span v-html="infoText"></span>
-                <span v-if="infoParent"
-                      @click="onClickParentLanguage"
-                      class="sw-language-info__link-parent">"{{ infoParent }}".</span>
-            </p>
+            <span v-html="infoText"></span>
+            <span v-if="infoParent"
+                  @click="onClickParentLanguage"
+                  class="sw-language-info__link-parent">
+                "{{ infoParent }}".
+            </span>
         {% endblock %}
-    </div>
+    </p>
 {% endblock %}
