--- a/Resources/administration/src/app/component/structure/sw-language-switch/sw-language-switch.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-language-switch/sw-language-switch.html.twig
@@ -37,7 +37,7 @@
         {% endblock %}
         {% block sw_language_switch_select %}
             <sw-select
-                    class="sw-language-switch"
+                    class="sw-language-switch__select"
                     :disabled="disabled"
                     id="language"
                     @input="onInput"
