NTR - Fix manufacturer tests

--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-list/sw-manufacturer-list.html.twig
@@ -62,7 +62,7 @@
                                                             sortable
                                                             truncate
                                                             editable>
-                                                <router-link :to="{ name: 'sw.manufacturer.detail', params: { id: item.id } }">
+                                                <router-link class="sw-manufacturer-list_column-manufacturer-name" :to="{ name: 'sw.manufacturer.detail', params: { id: item.id } }">
                                                     {{ item.name }}
                                                 </router-link>
 
