NEXT-1114 - Add recalculation features to the administration

--- a/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.scss
@@ -1,6 +1,14 @@
+@import "~less/variables";
+
 .sw-order-line-items-grid {
     .sw-icon {
         width: 16px;
         height: 16px;
     }
+}
+
+.sw-order-line-items-grid__actions-container
+{
+    padding: 24px;
+    border-bottom: 1px solid @color-steam-cloud;
 }
