--- a/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.scss
+++ b/Resources/administration/src/module/sw-order/view/sw-order-detail-base/sw-order-detail-base.scss
@@ -1,8 +1,55 @@
 @import "~scss/variables";
 
+$sw-order-detail-base-link : $color-shopware-blue;
+$sw-order-detail-base-select-status-payment: #EDF8FF;
+$sw-order-detail-base-select-status-payment-link: #189EFF;
+
+$sw-order-detail-base-select-status-delivery: #E7F9E9;
+$sw-order-detail-base-select-status-delivery-link: #23BE2F;
+
 .sw-order-detail-base {
     .sw-order-detail-base__summary {
         grid-template-areas: 'empty summary'
+    }
+
+    .sw-description-list {
+        line-height: 15px;
+
+        dt,
+        dd {
+            padding: 4px;
+            border-bottom: none;
+
+            &:last-of-type {
+                border-bottom-color: transparent;
+            }
+        }
+
+        dt {
+            font-weight: 600;
+            color: $color-kashmir;
+            padding-top: 21px;
+        }
+
+    }
+
+    .sw-description-list, .sw-alert {
+        .sw-order-detail-base__address-edit-button, .sw-order-detail-base__address-add-button, .sw-order-detail-base__continue-work-alert  {
+            color: @sw-order-detail-base-link;
+            background: transparent;
+            border: none;
+            line-height: 10px;
+            padding-top: 0;
+            padding-bottom: 0;
+            vertical-align: top;
+        }
+        .sw-order-detail-base__address-add-button {
+            margin-top: 5px;
+        }
+        .sw-order-detail-base__continue-work-alert {
+            vertical-align: initial;
+            padding-top: 0;
+        }
     }
 
     .sw-order-detail-base__summary-data {
@@ -11,13 +58,87 @@
 
         dt,
         dd {
+            line-height: 49px;
+            border-bottom: 1px solid @color-steam-cloud;
             color: $color-gutenberg;
             font-weight: normal;
             text-align: right;
+            padding: 0;
         }
 
         dd {
             padding-right: 60px;
+
+            .sw-order-saveable-field{
+                position: relative;
+                top: 50%;
+                transform: translateY(-50%);
+                left: 80px;
+            }
         }
     }
+
+    .sw-order-detail-base__user-summary-data {
+        padding: 0;
+
+        dt {
+            padding-top: 0;
+            padding-bottom: 0;
+            line-height: 25px;
+            font-size: 18px;
+        }
+        dd {
+            padding-top: 0;
+            line-height: 22px;
+            font-size: 14px;
+        }
+
+    }
+
+    .sw-order-detail-base__line-item-grid-card .sw-card__content {
+        padding: 0;
+    }
+
+    .sw-order-detail-base__status-action-container{
+        padding: 32px 0 12px 0;
+    }
+    .sw-order-detail-base__order-status-select{
+        .sw-select__inner {
+            border-radius: 15px;
+        }
+    }
+
+    .sw-order-detail-base__select-inline {
+        .sw-select__inner {
+
+            min-height: 32px;
+            padding-top: 2px;
+            padding-right: 32px;
+        }
+        .sw-select__indicators{
+            top: 5px;
+        }
+        .sw-select__single-selection{
+            padding: 0 8px;
+        }
+    }
+
+    .sw-order-detail-base__order-status-select-payment {
+        .sw-select__inner ,.sw-select-option.is--active {
+            background-color: $sw-order-detail-base-select-status-payment;
+            color: $sw-order-detail-base-select-status-payment-link;
+        }
+    }
+    .sw-order-detail-base__order-status-select-delivery {
+        .sw-select__inner ,.sw-select-option.is--active {
+            background-color: $sw-order-detail-base-select-status-delivery;
+            color: $sw-order-detail-base-select-status-delivery-link;
+        }
+    }
+
+    .sw-order-detail-base__version-notification {
+        max-width: 800px;
+    }
+
+
 }
