--- a/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.html.twig
+++ b/Resources/administration/src/app/component/base/sw-user-card/sw-user-card.html.twig
@@ -8,7 +8,7 @@
                     <sw-card-section divider="bottom">
 
                         {% block sw_user_card_metadata_container %}
-                            <sw-container columns="80px 1fr" gap="0px 30px">
+                            <sw-container columns="80px 1fr max-content" gap="0px 30px">
 
                                 {% block sw_user_card_avatar %}
                                     <sw-avatar :color="moduleColor"
@@ -56,8 +56,19 @@
                                     </div>
                                 {% endblock %}
 
+                                <div v-if="hasSummarySlot" align="right">
+                                    <slot name = "summary">
+
+                                    </slot>
+                                </div>
+
                             </sw-container>
                         {% endblock %}
+
+                        <div v-if="hasAdditionalDataSlot">
+                            <slot name="data-additional">
+                            </slot>
+                        </div>
 
                     </sw-card-section>
                 {% endblock %}
