--- a/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-line-items-grid/sw-order-line-items-grid.html.twig
@@ -1,75 +1,211 @@
 {% block sw_order_line_items_grid %}
-    <sw-grid class="sw-order-line-items-grid"
-             :selectable="false"
-             :items="orderLineItems"
-             table>
+    <sw-container slot="grid" type="row">
+        {% block sw_order_line_items_grid_actions %}
+            <sw-container class="sw-order-line-items-grid__actions-container"
+                          columns="1fr 1fr"
+                          v-show="editable">
 
-        {% block sw_order_line_items_grid_columns %}
-            <template slot="columns" slot-scope="{ item }">
+                {% block sw_order_line_items_grid_item_actions %}
+                    <div>
+                        {% block sw_order_line_items_grid_action_delete %}
+                            <sw-button @click="onDeleteSelectedItems"
+                                       size="small"
+                                       square
+                                       :disabled="!lineItemActionsEnabled">
+                                <sw-icon name="small-trash" small></sw-icon>
+                            </sw-button>
+                        {% endblock %}
 
-                {% block sw_order_line_items_grid_columns_name %}
-                    <sw-grid-column flex="minmax(180px, 1fr)"
-                                    :label="$tc('sw-order.detailBase.columnProductName')">
-                        {% block sw_order_line_items_grid_columns_name_link %}
-                            <router-link :title="$tc('sw-order.detailBase.contextMenuShowProduct')"
-                                         :to="{ name: 'sw.product.detail', params: { id: item.identifier } }">
-                                {% block sw_order_line_items_grid_columns_name_label %}
-                                    {{ item.label }}
+                    </div>
+                {% endblock %}
+
+                {% block sw_order_line_items_grid_create_actions %}
+                    <div align="right">
+                        {% block sw_order_line_items_grid_create_actions_button_group %}
+                            <sw-button-group :disabled="isLoading">
+
+                                {% block sw_order_line_items_grid_add_existing_product %}
+                                    <sw-button variant="ghost"
+                                               size="small"
+                                               @click="onInsertExistingItem">
+                                        {{ $tc('sw-order.detailBase.buttonAddExistingProduct')  }}
+                                    </sw-button>
                                 {% endblock %}
-                            </router-link>
-                        {% endblock %}
-                    </sw-grid-column>
-                {% endblock %}
 
-                {% block sw_order_line_items_grid_columns_unit_price %}
-                    <sw-grid-column flex="minmax(110px, 130px)"
-                                    align="right"
-                                    :label="$tc('sw-order.detailBase.columnPrice')">
-                        {% block sw_order_line_items_grid_columns_unit_price_label %}
-                            {{ item.unitPrice | currency(order.currency.shortName) }}
-                        {% endblock %}
-                    </sw-grid-column>
-                {% endblock %}
+                                {% block sw_order_line_items_grid_create_actions_dropdown%}
+                                    <sw-context-button>
+                                        <template slot="button">
 
-                {% block sw_order_line_items_grid_columns_quantity %}
-                    <sw-grid-column flex="minmax(110px, 110px)"
-                                    :label="$tc('sw-order.detailBase.columnQuantity')"
-                                    align="right">
-                        {% block sw_order_line_items_grid_columns_quantity_label %}
-                            {{ item.quantity }}
-                        {% endblock %}
-                    </sw-grid-column>
-                {% endblock %}
-
-                {% block sw_order_line_items_grid_columns_total_price %}
-                    <sw-grid-column flex="minmax(110px, 130px)"
-                                    align="right"
-                                    :label="$tc('sw-order.detailBase.columnTotalPrice')">
-                        {% block sw_order_line_items_grid_columns_total_price_label %}
-                            {{ item.totalPrice | currency(order.currency.shortName) }}
-                        {% endblock %}
-                    </sw-grid-column>
-                {% endblock %}
-
-                {% block sw_order_line_items_grid_columns_actions %}
-                    <sw-grid-column flex="minmax(70px, 70px)"
-                                    align="center">
-                        {% block sw_order_line_items_grid_columns_actions_button %}
-                            <sw-context-button>
-
-                                {% block sw_order_line_items_grid_columns_actions_show %}
-                                    <sw-context-menu-item icon="default-eye-open" :routerLink="{ name: 'sw.product.detail', params: { id: item.identifier } }">
-                                        {% block sw_order_line_items_grid_columns_actions_show_label %}
-                                            {{ $tc('sw-order.detailBase.contextMenuShowProduct') }}
+                                            <sw-button variant="ghost"
+                                                       size="small"
+                                                       square>
+                                                <sw-icon name="small-arrow-small-down" decorative></sw-icon>
+                                            </sw-button>
+                                        </template>
+                                        
+                                        {% block sw_order_line_items_grid_create_actions_dropdown%}
+                                            <sw-context-menu-item @click="onInsertBlankItem">
+                                                {{ $tc('sw-order.detailBase.buttonAddBlankProduct')  }}
+                                            </sw-context-menu-item>
                                         {% endblock %}
-                                    </sw-context-menu-item>
+
+                                    </sw-context-button>
                                 {% endblock %}
 
-                            </sw-context-button>
+
+                            </sw-button-group>
                         {% endblock %}
-                    </sw-grid-column>
+                    </div>
                 {% endblock %}
-            </template>
+            </sw-container>
         {% endblock %}
-    </sw-grid>
+
+        {% block sw_order_line_items_grid_grid %}
+            <sw-grid class="sw-order-line-items-grid"
+                     ref="order-line-items-grid"
+                     :selectable="editable"
+                     :items="orderLineItems"
+                     @inline-edit-cancel="onInlineEditCancel"
+                     @inline-edit-finish="onInlineEditSave"
+                     @sw-grid-select-item="onSelectionChanged"
+                     @sw-grid-select-all="onSelectionChanged"
+                     table>
+
+                {% block sw_order_line_items_grid_columns %}
+                    <template slot="columns" slot-scope="{ item }">
+
+                        {% block sw_order_line_items_grid_columns_name %}
+                            <sw-grid-column flex="minmax(180px, 1fr)"
+                                            :editable="editable"
+                                            :label="$tc('sw-order.detailBase.columnProductName')">
+                                {% block sw_order_line_items_grid_columns_name_link %}
+                                    <router-link :title="$tc('sw-order.detailBase.contextMenuShowProduct')"
+                                                 :to="{ name: 'sw.product.detail', params: { id: item.identifier } }">
+                                        {% block sw_order_line_items_grid_columns_name_label %}
+                                            {{ item.label }}
+                                        {% endblock %}
+                                    </router-link>
+                                {% endblock %}
+
+                                {% block sw_order_line_items_grid_columns_label_editor %}
+
+                                    <sw-order-product-select
+                                            slot="inline-edit"
+                                            :item="item"
+                                            :displayProductSelection="columnShouldDisplayProducts(item.id)">
+
+                                    </sw-order-product-select>
+
+                                {% endblock %}
+                            </sw-grid-column>
+
+                        {% endblock %}
+
+                        {% block sw_order_line_items_grid_columns_unit_price %}
+                            <sw-grid-column flex="minmax(110px, 130px)"
+                                            align="right"
+                                            :editable="editable"
+                                            :label="order.taxStatus === 'net'? $tc('sw-order.detailBase.columnPriceNet') : $tc('sw-order.detailBase.columnPriceGross')">
+                                {% block sw_order_line_items_grid_columns_unit_price_label %}
+                                    {{ item.unitPrice | currency(order.currency.shortName) }}
+                                {% endblock %}
+
+                                {% block sw_order_line_items_grid_columns_unit_price_editor %}
+                                    <!--TODO Es gibt keine float box? -->
+                                    <sw-field :disabled="pendingNewLineItemsFromProduct.indexOf(item.id) !== -1"
+                                              type="number"
+                                              v-model="item.priceDefinition.price"
+                                              slot="inline-edit"
+                                              :placeholder="'0 ' + order.currency.symbol"></sw-field>
+                                {% endblock %}
+
+                            </sw-grid-column>
+                        {% endblock %}
+
+                            <sw-grid-column flex="minmax(110px, 110px)"
+                                            :label="$tc('sw-order.detailBase.columnQuantity')"
+                                            align="right"
+                                            :editable="editable">
+                                {% block sw_order_line_items_grid_columns_quantity_label %}
+                                    {{ item.quantity }}
+                                {% endblock %}
+
+                                {% block sw_order_line_items_grid_columns_quantity_editor %}
+                                    <sw-field type="number"
+                                            v-model="item.quantity"
+                                            slot="inline-edit"
+                                            placeholder="0"></sw-field>
+                                {% endblock %}
+
+                            </sw-grid-column>
+
+                        {% block sw_order_line_items_grid_columns_quantity %}
+                            <sw-grid-column flex="minmax(110px, 130px)"
+                                            align="right"
+                                            :label="order.taxStatus === 'net' ? $tc('sw-order.detailBase.columnTotalPriceNet') : $tc('sw-order.detailBase.columnTotalPriceGross')">
+                                {% block sw_order_line_items_grid_columns_total_price_label %}
+                                    {{ item.totalPrice | currency(order.currency.shortName) }}
+                                {% endblock %}
+
+                            </sw-grid-column>
+                        {% endblock %}
+
+                        {% block sw_order_line_items_grid_columns_total_price %}
+                            <sw-grid-column flex="minmax(110px, 130px)"
+                                            align="right"
+                                            :editable="editable"
+                                            :label="$tc('sw-order.detailBase.columnTax')">
+                                {% block sw_order_line_items_grid_columns_tax_label %}
+                                    {{ item.priceDefinition.taxRules.elements[0].taxRate }} %
+                                {% endblock %}
+
+                                {% block sw_order_line_items_grid_columns_tax_editor %}
+                                    <sw-field type="number"
+                                              v-model="item.priceDefinition.taxRules.elements[0].taxRate"
+                                              slot="inline-edit"
+                                              :placeholder="'0 %'"
+                                              :disabled="pendingNewLineItemsFromProduct.indexOf(item.id) !== -1">
+                                    </sw-field>
+                                {% endblock %}
+                            </sw-grid-column>
+                        {% endblock %}
+
+                        {% block sw_order_line_items_grid_columns_slot %}
+                        {% endblock %}
+
+                        {% block sw_order_line_items_grid_columns_actions %}
+                            <sw-grid-column flex="minmax(70px, 70px)"
+                                            align="center">
+                                {% block sw_order_line_items_grid_columns_actions_button %}
+                                    <sw-context-button>
+
+                                        {% block sw_order_line_items_grid_columns_actions_show %}
+                                            <sw-context-menu-item icon="default-eye-open" :routerLink="{ name: 'sw.product.detail', params: { id: item.identifier } }">
+                                                {% block sw_order_line_items_grid_columns_actions_show_label %}
+                                                    {{ $tc('sw-order.detailBase.contextMenuShowProduct') }}
+                                                {% endblock %}
+                                            </sw-context-menu-item>
+                                        {% endblock %}
+
+                                    </sw-context-button>
+                                {% endblock %}
+                            </sw-grid-column>
+                        {% endblock %}
+                    </template>
+                {% endblock %}
+
+                <template slot="pagination">
+                    {% block sw_order_line_items_grid_pagination %}
+                    <sw-pagination :page="page"
+                                   :limit="limit"
+                                   :total="total"
+                                   :total-visible="1"
+                                   @page-change="onPageChange">
+                    </sw-pagination>
+                    {% endblock %}
+                </template>
+
+            </sw-grid>
+        {% endblock %}
+    </sw-container>
 {% endblock %}
