--- a/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
+++ b/Resources/administration/src/module/sw-order/page/sw-order-detail/sw-order-detail.html.twig
@@ -16,16 +16,21 @@
         {% block sw_order_detail_actions %}
             <template slot="smart-bar-actions">
                 {% block sw_order_detail_actions_abort %}
-                    <sw-button :routerLink="{ name: 'sw.order.index' }" :disabled="order.isLoading">
+                    <sw-button v-show="isEditing" :disabled="order.isLoading" @click ="onCancelEditing">
                         {{ $tc('sw-order.detail.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
 
                 {% block sw_order_detail_actions_save %}
-                    <sw-button variant="primary" :disabled="order.isLoading">
+                    <sw-button variant="primary" v-show="isEditing" :disabled="order.isLoading" @click ="onSave">
                         {{ $tc('sw-order.detail.buttonSave') }}
                     </sw-button>
                 {% endblock %}
+
+                <sw-button v-show="!isEditing" :disabled="order.isLoading" square @click="onStartEditing">
+                    <sw-icon name="default-documentation-paper-pencil" small></sw-icon>
+                </sw-button>
+
             </template>
         {% endblock %}
 
@@ -35,29 +40,9 @@
 
         {% block sw_order_detail_content %}
             <sw-card-view slot="content">
-
-                {% block sw_order_detail_content_tabs %}
-                    <sw-tabs class="sw-order-detail-page__tabs">
-                        {% block sw_order_detail_content_tabs_tab_base %}
-                            <sw-tabs-item :route="{ name: 'sw.order.detail.base', params: { id: $route.params.id } }"
-                                          :title="$tc('sw-order.detail.tabOrderDetails')">
-                                {{ $tc('sw-order.detail.tabOrderDetails') }}
-                            </sw-tabs-item>
-                        {% endblock %}
-
-                        {% block sw_order_detail_content_tabs_tab_deliveries %}
-                            <sw-tabs-item :route="{ name: 'sw.order.detail.deliveries', params: { id: $route.params.id } }"
-                                          :title="$tc('sw-order.detail.tabDeliveries')">
-                                {{ $tc('sw-order.detail.tabDeliveries') }}
-                            </sw-tabs-item>
-                        {% endblock %}
-                    </sw-tabs>
-                {% endblock %}
-
                 {% block sw_order_detail_content_view %}
-                    <router-view :order="order"></router-view>
+                    <router-view :order="order" ref="baseComponent" @sw-order-detail-base-error = "onError"></router-view>
                 {% endblock %}
-
             </sw-card-view>
         {% endblock %}
     </sw-page>
