--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
@@ -1,82 +1,37 @@
 {% block sw_media_sidebar %}
     <div class="sw-media-sidebar">
-        <h3 class="sw-media-sidebar__headline">{{ headLine }}</h3>
+        {% block sw_media_sidebar_headline %}
+            <h3 class="sw-media-sidebar__headline">{{ headLine }}</h3>
+        {% endblock %}
+
         {% block sw_media_sidebar_item_quickinfo_content %}
+            <div class="sw-media-sidebar__quickinfo-scroll-container">
+                <sw-media-quickinfo
+                    v-if="isSingleFile && firstEntity.entityName === 'media'"
+                    :item="firstEntity"
+                    v-on="$listeners">
+                </sw-media-quickinfo>
 
+                <sw-media-folder-info
+                    v-else-if="isSingleFile && firstEntity.entityName === 'media_folder'"
+                    :mediaFolder="firstEntity"
+                    v-on="$listeners">
+                </sw-media-folder-info>
 
-        <div class="sw-media-sidebar__quickinfo-scroll-container">
-            <sw-media-quickinfo
-                v-if="isSingleFile"
-                :item="firstEntity"
-                @sw-media-quickinfo-open-modal-replace="openModalReplace"
-                @sw-media-quickinfo-open-modal-delete="openModalDelete"
-                @sw-media-quickinfo-open-folder-settings="openFolderSettings"
-                @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
-                @sw-media-quickinfo-open-folder-move="openModalMove">
-            </sw-media-quickinfo>
+                <sw-media-quickinfo-multiple
+                    v-else-if="isMultipleFile"
+                    :items="items"
+                    v-on="$listeners">
+                </sw-media-quickinfo-multiple>
 
-            <sw-media-quickinfo-multiple
-                v-else-if="isMultipleFile"
-                :items="items"
-                @sw-media-quickinfo-open-modal-delete="openModalDelete"
-                @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
-                @sw-media-quickinfo-open-folder-move="openModalMove">
-            </sw-media-quickinfo-multiple>
+                <sw-media-folder-info
+                    v-else-if="currentFolder"
+                    :mediaFolder="currentFolder"
+                    v-on="$listeners">
+                </sw-media-folder-info>
 
-            <sw-media-quickinfo v-else-if="currentFolder"
-                :item="currentFolder"
-                @sw-media-quickinfo-open-modal-replace="openModalReplace"
-                @sw-media-quickinfo-open-modal-delete="openModalDelete"
-                @sw-media-quickinfo-open-folder-settings="openFolderSettings"
-                @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
-                @sw-media-quickinfo-open-folder-move="openModalMove">>
-            </sw-media-quickinfo>
-            <div v-else> TODO: Illustration keine Medien sobald verfügbar...</div>
-        </div>
-        {% endblock %}
-
-        {% block sw_media_sidebar_modal_replace %}
-            <sw-media-modal-replace
-                v-if="isSingleFile && showModalReplace"
-                :itemToReplace="firstEntity"
-                @sw-media-modal-replace-close="closeModalReplace">
-            </sw-media-modal-replace>
-        {% endblock %}
-
-        {% block sw_media_sidebar_modal_delete %}
-            <sw-media-modal-delete
-                v-if="hasItems && showModalDelete"
-                :itemsToDelete="mediaItems"
-                @sw-media-modal-delete-close="closeModalDelete"
-                @sw-media-modal-delete-items-deleted="deleteSelectedItems">
-            </sw-media-modal-delete>
-        {% endblock %}
-
-        {% block sw_media_sidebar_folder_settings_modal %}
-            <sw-media-modal-folder-settings
-                    v-if="showFolderSettings"
-                    :folder="firstEntity"
-                    @sw-media-modal-folder-settings-save="closeFolderSettings"
-                    @sw-media-modal-folder-settings-close="closeFolderSettings">
-            </sw-media-modal-folder-settings>
-        {% endblock %}
-
-        {% block sw_media_sidebar_folder_dissolve_modal %}
-            <sw-media-modal-folder-dissolve
-                    v-if="showFolderDissolve"
-                    :itemsToDissolve="items"
-                    @sw-media-modal-folder-dissolve-items-dissolved="onFolderDissolved"
-                    @sw-media-modal-folder-dissolve-close="closeFolderDissolve">
-            </sw-media-modal-folder-dissolve>
-        {% endblock %}
-
-        {% block sw_media_sidebar_folder_move_modal %}
-            <sw-media-modal-move
-                    v-if="showModalMove"
-                    :itemsToMove="items"
-                    @sw-media-modal-move-close="closeModalMove"
-                    @sw-media-modal-move-items-moved="onFolderMoved">
-            </sw-media-modal-move>
+                <div v-else class="sw-media-sidebar__item-info"> TODO: Illustration keine Medien sobald verfügbar...</div>
+            </div>
         {% endblock %}
     </div>
 {% endblock %}
