--- a/Resources/administration/src/module/sw-media/component/sw-media-collapse/sw-media-collapse.scss
+++ b/Resources/administration/src/module/sw-media/component/sw-media-collapse/sw-media-collapse.scss
@@ -1,30 +1,30 @@
 @import "~scss/variables";
 
-$sw-media-collapse-color-divider: $color-steam-cloud;
-$sw-media-collapse-color-title: $color-gutenberg;
+$sw-media-collapse-color-divider:   $color-steam-cloud;
+$sw-media-collapse-color-title:     $color-gutenberg;
 $sw-media-collapse-font-size-title: $font-size-default;
 
-.sw-collapse {
+.sw-media-sidebar .sw-collapse {
     .sw-media-collapse__header {
         display: grid;
         grid-template-columns: 1fr auto;
         cursor: pointer;
-        padding-top: 16px;
+        padding: 16px 25px 0;
         color: $sw-media-collapse-color-title;
-        border-top: 1px solid $sw-media-collapse-color-divider;
     }
 
     .sw-media-collapse__title {
         font-size: $sw-media-collapse-font-size-title;
         font-weight: normal;
-        margin: 0 25px 0;
     }
 
-    .sw-media-collapse__button {
-        margin-right: 25px;
-
-        &.is--hidden {
+    .sw-media-collapse__button.is--hidden {
             display: none;
-        }
     }
+
+    .sw-collapse__content {
+        padding: 0 25px 25px;
+    }
+
+    border-bottom: 1px solid $sw-media-collapse-color-divider;
 }
