--- a/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.less
+++ b/Resources/administration/src/module/sw-category/component/sw-category-tree/sw-category-tree.less
@@ -2,10 +2,8 @@
 
 .sw-category-tree.sw-tree {
     background: @color-white;
+    height: 100%;
     border: none;
-    border-right: 1px solid @color-steam-cloud;
-    height: calc(100vh - 152px);
-    width: 400px;
 
     .sw-tree__actions {
         padding: 0 30px;
@@ -23,7 +21,7 @@
     }
 
     .sw-tree__content {
-        padding: 24px 16px 0 16px;
+        padding: 24px 16px;
         max-height: unset;
         min-height: unset;
         height: ~"calc(100% - 64px)";
