--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.less
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.less
@@ -1,6 +1,9 @@
 @import "~less/variables";
 
 .sw-category-view {
+    &.sw-card-view .sw-card-view__content {
+        padding: 30px;
+    }
     .sw-text-editor {
         margin-bottom: 0;
     }
