NTR - Fix datepicker-field width

--- a/Resources/administration/src/app/component/form/sw-datepicker/sw-datepicker.less
+++ b/Resources/administration/src/app/component/form/sw-datepicker/sw-datepicker.less
@@ -8,6 +8,8 @@
 @sw-datepicker-color-text-selected: @color-white;
 
 .sw-datepicker {
+    flex: 1;
+
     .flatpickr-input {
         height: 45px;
     }
