NTR - Set field-suffix icons to 16px

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.less
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.less
@@ -501,6 +501,11 @@
         font-size: @sw-field-font-size;
         color: @sw-field-color-text;
         transition: @sw-field-transition;
+
+        .sw-icon {
+            width: 16px;
+            height: 16px;
+        }
     }
 
     .sw-field__help {
