--- a/Resources/administration/src/app/component/structure/sw-search-bar/sw-search-bar.scss
+++ b/Resources/administration/src/app/component/structure/sw-search-bar/sw-search-bar.scss
@@ -115,6 +115,7 @@ $sw-search-bar-mobile-box-shadow: 0 3px 3px rgba(0, 0, 0, 0.3);
         border-radius: $sw-search-bar-border-radius;
         flex-shrink: 0;
         font-weight: 600;
+        font-size: 14px;
     }
 
     .sw-search-bar__input {
