--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.less
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.less
@@ -15,6 +15,10 @@
     grid-template-rows: auto 1fr;
     border-left: 1px solid @color-steam-cloud;
 
+    &.no-headline {
+        grid-template-rows: unset;
+    }
+
     .sw-media-sidebar__headline {
         .truncate();
         padding: 25px;
@@ -36,6 +40,18 @@
             width: 100%;
             height: 100%;
         }
+    }
+
+    .sw-media-sidebar__empty-state {
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        justify-content: center;
+    }
+
+    .sw-media-sidebar__empty-state-label {
+        color: @color-steam-cloud;
+        margin: 0 auto;
     }
 
     .sw-media-sidebar__metadata-list{
